--- a/_posts/2013-03-21-new-tech-march-2013.md
+++ b/_posts/2013-03-21-new-tech-march-2013.md
@@ -17,12 +17,14 @@ Another month, another great [Denver New Tech Meetup](http://www.bdnewtech.com).
 
 First up, [Piq.fm](http://piq.fm).
 
-![piq_logo](/assets/images/posts/2013/03/piq_logo.png)
+<div class="center">
+	<img src="/assets/images/posts/2013/03/piq_logo.png" width="600" height="600" alt="Logo for Piq" />
+</div>
 
 Fresh out of Boulder, Piq.fm aims to empower users to have a say in the music playing in a shared space. For instance, your friend who just loves "Call Me Maybe" might be playing it on repeat. With Piq, the music choices are crowdsourced via a web application. It currently hooks up with streaming services like Pandora and Spotify, and is intended for use in small, collaborative spaces (since they don't have public performance figured out at this stage). For hardware geeks, they're currently using a [Raspberry Pi](http://www.raspberrypi.org) with a USB Wi-Fi Dongle and an SD Card for storing the application.
 
 <div class="center">
-	<img src="/assets/images/posts/2013/03/adafruitcase.jpg" />
+	<img src="/assets/images/posts/2013/03/adafruitcase.jpg" width="600" height="461" alt="Ada FruitCase Arduino board" />
 </div>
 
 It's a very cool idea. They're currently selling five prototypes to beta users and are soon to launch a Kickstarter for their initial production. Piq.fm also plans to eventually move to a custom hardware solution. If you're fast, you might be able to get involved with their beta program, so [hit them up](mailto:contact@piq.fm) if that tickles your fancy. Also, remember to follow them on [Twitter](https://twitter.com/piqFM) and [Facebook](https://www.facebook.com/pages/Piq/326779564098850).
