SEO improvements. Added description and new title logic.

--- a/_posts/2013-03-21-new-tech-march-2013.md
+++ b/_posts/2013-03-21-new-tech-march-2013.md
@@ -8,10 +8,7 @@ tags:
 status: publish
 type: post
 published: true
-meta:
-  _edit_last: '1'
-  _wpas_done_all: '1'
-  image: ''
+description: "A writeup of Ben Limmer's favorite presentations at the March 2013 Denver New Tech Meetup held at Galvanize in Denver, Colorado, USA."
 ---
 Another month, another great [Denver New Tech Meetup](http://www.bdnewtech.com). This time around New Tech featured two particularly interesting new music startups. They're both pretty fresh, but have some interesting ideas.
 
