perf: ministamp all images

--- a/_posts/2013-03-21-new-tech-march-2013.md
+++ b/_posts/2013-03-21-new-tech-march-2013.md
@@ -2,27 +2,45 @@
 layout: post
 title: Denver New Tech - March 2013
 tags:
-- denver
-- denver new tech
-- startups
-description: "A writeup of Ben Limmer's favorite presentations at the March 2013 Denver New Tech Meetup held at Galvanize in Denver, Colorado, USA."
+  - denver
+  - denver new tech
+  - startups
+description:
+  "A writeup of Ben Limmer's favorite presentations at the March 2013 Denver New Tech Meetup held at Galvanize in
+  Denver, Colorado, USA."
 ---
-Another month, another great [Denver New Tech Meetup](http://www.bdnewtech.com). This time around New Tech featured two particularly interesting new music startups. They're both pretty fresh, but have some interesting ideas.
+
+Another month, another great [Denver New Tech Meetup](http://www.bdnewtech.com). This time around New Tech featured two
+particularly interesting new music startups. They're both pretty fresh, but have some interesting ideas.
 
 First up, [Piq.fm](http://piq.fm).
 
 <div class="center">
-	<img src="/assets/images/posts/2013/03/piq_logo.png" width="600" height="600" alt="Logo for Piq" />
+	<img src="{{ site.base_url }}/{% ministamp _images/posts/2013/03/piq_logo.png assets/images/posts/2013/03/piq_logo.png %}" width="600" height="600" alt="Logo for Piq" />
 </div>
 
-Fresh out of Boulder, Piq.fm aims to empower users to have a say in the music playing in a shared space. For instance, your friend who just loves "Call Me Maybe" might be playing it on repeat. With Piq, the music choices are crowdsourced via a web application. It currently hooks up with streaming services like Pandora and Spotify, and is intended for use in small, collaborative spaces (since they don't have public performance figured out at this stage). For hardware geeks, they're currently using a [Raspberry Pi](http://www.raspberrypi.org) with a USB Wi-Fi Dongle and an SD Card for storing the application.
+Fresh out of Boulder, Piq.fm aims to empower users to have a say in the music playing in a shared space. For instance,
+your friend who just loves "Call Me Maybe" might be playing it on repeat. With Piq, the music choices are crowdsourced
+via a web application. It currently hooks up with streaming services like Pandora and Spotify, and is intended for use
+in small, collaborative spaces (since they don't have public performance figured out at this stage). For hardware geeks,
+they're currently using a [Raspberry Pi](http://www.raspberrypi.org) with a USB Wi-Fi Dongle and an SD Card for storing
+the application.
 
 <div class="center">
-	<img src="/assets/images/posts/2013/03/adafruitcase.jpg" width="600" height="461" alt="Ada FruitCase Arduino board" />
+	<img src="{{ site.base_url }}/{% ministamp _images/posts/2013/03/adafruitcase.jpg assets/images/posts/2013/03/adafruitcase.jpg %}" width="600" height="461" alt="Ada FruitCase Arduino board" />
 </div>
 
-It's a very cool idea. They're currently selling five prototypes to beta users and are soon to launch a Kickstarter for their initial production. Piq.fm also plans to eventually move to a custom hardware solution. If you're fast, you might be able to get involved with their beta program, so [hit them up](mailto:contact@piq.fm) if that tickles your fancy. Also, remember to follow them on [Twitter](https://twitter.com/piqFM) and [Facebook](https://www.facebook.com/pages/Piq/326779564098850).
+It's a very cool idea. They're currently selling five prototypes to beta users and are soon to launch a Kickstarter for
+their initial production. Piq.fm also plans to eventually move to a custom hardware solution. If you're fast, you might
+be able to get involved with their beta program, so [hit them up](mailto:contact@piq.fm) if that tickles your fancy.
+Also, remember to follow them on [Twitter](https://twitter.com/piqFM) and
+[Facebook](https://www.facebook.com/pages/Piq/326779564098850).
 
-The other music-oriented startup presenting tonight was [Musikfly](https://musikfly.com). Also out of Boulder, Musikfly aims to connect music bloggers with artists. Today, the process of submitting music to a blog is a manual process. It sucks for artists; it sucks for bloggers. Musikfly aims to easily connect artists and bloggers who mesh. They also have a unique feature that allows bloggers to quickly and easily provide feedback to (paying) users as they listen to their song.
+The other music-oriented startup presenting tonight was [Musikfly](https://musikfly.com). Also out of Boulder, Musikfly
+aims to connect music bloggers with artists. Today, the process of submitting music to a blog is a manual process. It
+sucks for artists; it sucks for bloggers. Musikfly aims to easily connect artists and bloggers who mesh. They also have
+a unique feature that allows bloggers to quickly and easily provide feedback to (paying) users as they listen to their
+song.
 
-Musikfly started as a school project, but these full-time students are looking to change the music blogging scene. These guys are putting in long hours while still being students, so I'll be interested to see what they come up with!
+Musikfly started as a school project, but these full-time students are looking to change the music blogging scene. These
+guys are putting in long hours while still being students, so I'll be interested to see what they come up with!
