--- a/src/content/portfolio/freelance/datadog-integration/index.mdx
+++ b/src/content/portfolio/freelance/datadog-integration/index.mdx
@@ -1,12 +1,13 @@
 ---
-layout: page
-title: Datadog Integration
 description:
-  "Ben Limmer is a freelance engineer who can help you negotiate and deploy Datadog for your organization. Learn more
-  and contact me today!"
+  Ben Limmer is a freelance engineer who can help you negotiate and deploy Datadog for your organization. Learn more and
+  contact me today!
+title: Datadog Integration
+tldr: "I'm an expert at integrating Datadog, contract negotiation, deployment, and employee training."
 ---
 
-{% include tldr.html content='I\'m an expert at integrating Datadog, contract negotiation, deployment, and employee training.' %}
+import MdxImage from "src/components/MdxImage.astro";
+import datadogLogo from "./assets/datadog-logo.svg";
 
 [Datadog](https://datadoghq.com) is one of my favorite observability platforms. They offer a multitude of
 [products](https://www.datadoghq.com/product/), including APM, metrics, error tracking, log ingestion, and more. In
@@ -15,8 +16,8 @@ addition, their suite of products continues to grow, replacing the need for a mu
 In 2020, I handled contract negotiation, initial deployment, and ongoing setup and training for a rapidly growing
 client.
 
-<div class='center mt-5 mb-5'>
-  <img src="{{ site.base_url }}/{% ministamp _images/portfolio/freelance/datadog-integration/datadog-logo.svg assets/images/pages/portfolio/freelance/datadog-integration/datadog-logo.svg %}" style='max-width: 40%' alt='Datadog logo'>
+<div class="center mt-5 mb-5">
+  <MdxImage src={datadogLogo} alt="Datadog logo" width="1/2" />
 </div>
 
 ## Contract Negotiation
