--- a/src/content/portfolio/freelance/automated-front-end-content-preview/index.mdx
+++ b/src/content/portfolio/freelance/automated-front-end-content-preview/index.mdx
@@ -1,12 +1,16 @@
 ---
-layout: page
-title: Automated Front End Content Preview
 description:
-  "Ben Limmer is a freelance engineer who can help accelerate your frontend engineering teams by deploying an automated
-  content preview solution. Learn more and contact me today!"
+  Ben Limmer is a freelance engineer who can help accelerate your frontend engineering teams by deploying an automated
+  content preview solution. Learn more and contact me today!
+title: Automated Front End Content Preview
+tldr:
+  'Reduce cycle time by automatically deploying "preview" single-page applications for every front-end pull request.'
 ---
 
-{% include tldr.html content='Reduce cycle time by automatically deploying "preview" single-page applications for every front-end pull request.' %}
+import MdxImage from "src/components/MdxImage.astro";
+import botPrPostback from "./assets/bot-pr-postback.png";
+import prUpload from "./assets/pr-upload.png";
+import requestDiagram from "./assets/request-diagram.png";
 
 Some of the most productive front-end engineering teams utilize a
 [Continuous Deployment (CD)](https://en.wikipedia.org/wiki/Continuous_deployment) process to automatically deploy code
@@ -30,16 +34,15 @@ When an engineer opens a Pull Request, a [GitHub Action](https://github.com/feat
 1. Uploads the built assets to the S3 bucket with a `content-preview/<branch-name>/` prefix (e.g,
    `s3://bucket-name/content-preview/feature-my-branch`).
 
-    <div class="center mb-2">
-      <img src="{{ site.base_url }}/{% ministamp _images/portfolio/freelance/content-preview/pr-upload.png assets/images/pages/portfolio/freelance/content-preview/pr-upload.png %}" alt='diagram describing the steps outlined above'>
-    </div>
+   <MdxImage src={prUpload} alt="diagram describing the steps outlined above" />
 
-1. A bot user posts back to the PR with a URL to view the preview. You can learn more about how this bot user works [on
-   my blog]({% post_url 2021-12-20-create-or-update-pr-comment %}).
+1. A bot user posts back to the PR with a URL to view the preview. You can learn more about how this bot user works
+   [on my blog](/2021/12/20/create-or-update-pr-comment/).
 
-  <div class="center mb-4">
-    <img src="{{ site.base_url }}/{% ministamp _images/portfolio/freelance/content-preview/bot-pr-postback.png assets/images/pages/portfolio/freelance/content-preview/bot-pr-postback.png %}" alt='a bot user posting the URL to view the content preview to the GitHub pull request comment feed'>
-  </div>
+   <MdxImage
+     src={botPrPostback}
+     alt="a bot user posting the URL to view the content preview to the GitHub pull request comment feed"
+   />
 
 Then, when the user visits the preview URL (e.g., `https://feature-my-branch.client.com`):
 
@@ -48,9 +51,7 @@ Then, when the user visits the preview URL (e.g., `https://feature-my-branch.cli
    requests to content preview subdomains and serves the static assets from the `content-preview/<branch-name>/` path in
    S3. The requester is served the assets produced and uploaded by the GitHub action described above.
 
-  <div class="center mb-2">
-    <img src="{{ site.base_url }}/{% ministamp _images/portfolio/freelance/content-preview/request-diagram.png assets/images/pages/portfolio/freelance/content-preview/request-diagram.png %}" alt='diagram describing the request steps outlined above'>
-  </div>
+   <MdxImage src={requestDiagram} alt="diagram describing the request steps outlined above" />
 
 This simple, cost-effective solution significantly improved developers confidence to review and approve changes. Easily
 previewing changes empowers developers, QA, and design to quickly review and iterate.
@@ -58,4 +59,4 @@ previewing changes empowers developers, QA, and design to quickly review and ite
 ## Freelance Services
 
 Are you interested in being able to preview front-end application changes during your development process? I'd love to
-help! Learn more about my [freelance services](/freelance) and [reach out](/freelance/contact).
+help!
