feat: migrate ibotta portfolio

--- a/src/content/portfolio/ibotta/digital-payments/index.mdx
+++ b/src/content/portfolio/ibotta/digital-payments/index.mdx
@@ -1,8 +1,10 @@
 ---
-layout: page
+description: A description of Ben Limmer's role building the Pay with Ibotta product.
 title: Digital Payments Solutions Architect
-description: "A description of Ben Limmer's role building the Pay with Ibotta product."
 ---
+
+import MdxImage from "src/components/MdxImage.astro";
+import pwi from "./assets/pwi.png";
 
 From January 2019 to January 2020, I was the Solutions Architect for Ibotta's Payments team. This team consisted of 30+
 technologists working on the [Pay with Ibotta](https://pay.ibotta.com) product.
@@ -33,8 +35,6 @@ which made Ibotta one of Colorado's only unicorn technology companies, valued at
 - [ACH Transfers](https://en.wikipedia.org/wiki/Automated_clearing_house)
 - Real-Time Gift Card Provisioning
 
-<div class='center mt-5 mb-5'>
-  <img src="{{ site.base_url }}/{% ministamp _images/portfolio/ibotta/pwi.png assets/images/pages/portfolio/ibotta/pwi.png %}">
-</div>
+<MdxImage src={pwi} alt="" />
 
 For more information on the Pay with Ibotta product, visit [pay.ibotta.com](https://pay.ibotta.com).
