--- a/src/content/portfolio/startupcommunities/index.mdx
+++ b/src/content/portfolio/startupcommunities/index.mdx
@@ -1,14 +1,16 @@
 ---
-layout: page
-title: "Startup Communities"
-description: "Description of Ben Limmer's section in Startup Communities by Brad Feld"
+description: Description of Ben Limmer's section in Startup Communities by Brad Feld
+title: Startup Communities
 ---
+
+import MdxImage from "src/components/MdxImage.astro";
+import startupcommunities from "./assets/StartupCommunities.jpg";
 
 In mid-2012 I was approached by [Brad Feld](http://www.feld.com), with whom I had worked extensively on the
 [startups2students](/portfolio/startups2students "Startups2Students") event at CU, to write an excerpt for his new book
 [Startup Communities: Building an Entrepreneurial Ecosystem in Your City](http://www.amazon.com/Startup-Communities-Building-Entrepreneurial-Ecosystem/dp/1118441540).
 
-<div class="center"><img src="{{ site.base_url }}/{% ministamp _images/pages/portfolio/StartupCommunities.jpg assets/images/pages/portfolio/StartupCommunities.jpg %}" width="300" height="168" alt="Startup Communities Book Cover" /></div>
+<MdxImage src={startupcommunities} alt="Startup Communities Book Cover" />
 
 I was thrilled to hear from Brad and to have a chance to write an excerpt for his book. My piece is featured in the
 "University Involvement" chapter and reflects on the personal struggle that prompted me to start the
