--- a/src/content/portfolio/startups2students.mdx
+++ b/src/content/portfolio/startups2students.mdx
@@ -1,7 +1,6 @@
 ---
-layout: page
-title: "Startups2Students"
-description: "Description of Ben Limmer's involvement in starting the startups2students event at CU Boulder"
+description: Description of Ben Limmer's involvement in starting the startups2students event at CU Boulder
+title: Startups2Students
 ---
 
 In 2008, myself and a group of fellow students re-launched a dormant Computer Science group called the Computer Science
