--- a/src/content/portfolio/waldo/index.mdx
+++ b/src/content/portfolio/waldo/index.mdx
@@ -1,16 +1,16 @@
 ---
-layout: page
+description: Description of Ben Limmer's Senior Project, Waldo, at CU Boulder
 title: "Waldo: Intelligent Call Handler"
-description: "Description of Ben Limmer's Senior Project, Waldo, at CU Boulder"
 ---
+
+import MdxImage from "src/components/MdxImage.astro";
+import waldoFinalPicture from "./assets/WaldoFinalPicture.png";
 
 In conjunction with [Gold Systems](http://www.goldsys.com), a Microsoft certified gold partner, myself and three other
 senior computer science students implemented a project we code-named "Waldo". Here's a shot of the team after our final
 presentation in April 2011.
 
-<div class="center">
-	<img src="{{ site.base_url }}/{% ministamp _images/posts/2011/04/WaldoFinalPicture.png assets/images/posts/2011/04/WaldoFinalPicture.png %}" width="616" height="462" alt="Waldo Final Picture" />
-</div>
+<MdxImage src={waldoFinalPicture} alt="Waldo Final Picture" />
 
 Our original description was broad, stating only that we needed to implement the project using Microsoft's
 [Lync Server](https://web.archive.org/web/20111231025822///lync.microsoft.com/en-us/Pages/default.aspx) and Unified
